# site_scrapers

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
models/: Car.py
parsers/: mollerAuto.py
scrapers/: brcAuto.py  inchcape.py  mollerAuto.py  scraper.py  utils.py
scrapers/details/: brcAuto.py  inchcape.py  mollerAuto.py
scrapers/list/: brcAuto.py  inchcape.py  mollerAuto.py
site_scrapers/scrapers/: scraper.py  utils.py
site_scrapers/scrapers/details/: brcAuto.py  inchcape.py  mollerAuto.py
site_scrapers/scrapers/list/: brcAuto.py  inchcape.py  mollerAuto.py
site_scrapers/tests/scrapers/: test_utils.py
site_scrapers/tests/scrapers/details/: test_brcAuto.py  test_inchcape.py  test_mollerAuto.py
site_scrapers/tests/scrapers/details/brc_data/: brc_bmw_220.html  brc_ford_focus.html  brc_mercedes_ml_500.html
site_scrapers/tests/scrapers/details/inchcape/: inchcape_bmw_530.html  inchcape_bmw_x6m.html  inchcape_ford_focus.html  inchcape_ford_mondeo.html  inchcape_lexus_ux.html  inchcape_vw_tiguan.html
site_scrapers/tests/scrapers/details/moller_data/: moller_vw_amarok.html
src/scrapers/: mollerAuto.py
tests/scrapers/: test_utils.py
tests/scrapers/details/: test_brcAuto.py  test_inchcape.py  test_mollerAuto.py
tests/scrapers/details/brc_data/: brc_mercedes_gl-3.0.html
tests/scrapers/details/inchcape/: inchcape_bmw_530.html
tests/scrapers/details/moller_data/: moller_audi.html  moller_audi_a6_sport.html
utils/: sync_to_async.py
