[tool.poetry]
name = "site_scrapers"
version = "0.0.31"
description = ""
readme = "README.md"
homepage = "https://github.com/dmitrijs-balcers/site_scrapers"
authors = ["Dmitrijs Balcers, <dmitrijs.balcers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
returns = "^0.18.0"
gazpacho = "^1.1"
requests = "^2.27.1"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
types-requests = "^2.27.7"
types-setuptools = "^57.4.7"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
